--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(ConstellationDDS C)
 
 set(CMAKE_C_STANDARD 23)
 
-add_library(ConstellationDDS STATIC library.c)
+add_library(ConstellationDDS STATIC library.c
+        library.h)
 
 add_executable(Test Test.c)
 
